--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: SP500R
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Easy loading of SP500 stocks data
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Pierre Foret
+Maintainer: Pierre Foret <Pierre.foret@ensae.fr>
+Description: Allows the user to load SP500 stocks data as data frame or time series
+License: MIT
 Encoding: UTF-8
+Imports: magrittr, dplyr, lubridate
 LazyData: true
+RoxygenNote: 6.0.1
+
+
