--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,6 @@ Encoding: UTF-8
 Imports: magrittr, dplyr, lubridate
 LazyData: true
 RoxygenNote: 6.0.1
-
-
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
